data/all_generated_tests/raw_wast_tests/br_if_IncorrectBranchTargetResolution_1406.wast
;; 7. **Test Description**: Design a scenario where a `br_if` in a `block` targets a `loop` that is nested further inside another `block`. Validate backward jump resolution.    - **Constraint Checked**: Resolution of nested branching when not directly enclosed.    - **Related Issue**: Properly identifying jumping paths and indices in complex nestings.

(assert_invalid
  (module
    (func $nested-br_if
      (block
        (loop
          (block 
            (br_if 0 (i32.const 1))
          )
        )
      )
    )
  )
  "type mismatch"
)